--- a/PTCGPAI2/PTCGPAI2.vcxproj
+++ b/PTCGPAI2/PTCGPAI2.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="GameState.hpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="pokemon_cards.csv" />
